--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1187,7 +1187,7 @@
         android:layout_height="0dp"
         android:background="#101217"
         android:paddingVertical="8dp"
-        app:layout_constraintHeight="parent=0.075"
+        app:layout_constraintHeight="parent=0.0755"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -1367,21 +1367,35 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="12dp"
+                android:tag="square"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/shapeTitle">
+
+                <RadioButton
+                    android:id="@+id/squareRadioButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:checked="true"
+                    android:buttonTint="@color/white"
+                    android:clickable="false"
+                    android:focusable="false"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/squareTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="8dp"
                     android:clickable="false"
                     android:focusable="false"
                     android:text="@string/shape_square"
                     android:textColor="#FFFFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/squareRadioButton"
                     app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -1395,21 +1409,35 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="12dp"
+                android:tag="round"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/squareLayout">
+
+                <RadioButton
+                    android:id="@+id/roundRadioButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:checked="false"
+                    android:buttonTint="@color/white"
+                    android:clickable="false"
+                    android:focusable="false"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/roundTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="8dp"
                     android:clickable="false"
                     android:focusable="false"
                     android:text="@string/shape_round"
                     android:textColor="#FFFFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/roundRadioButton"
                     app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -1767,9 +1795,7 @@
                     android:layout_margin="4dp"
                     android:padding="8dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintEnd_toStartOf="@+id/color1Guide"
@@ -1783,9 +1809,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintBottom_toBottomOf="@+id/mintButton"
@@ -1800,9 +1824,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintBottom_toBottomOf="@+id/mintButton"
@@ -1817,9 +1839,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintBottom_toBottomOf="@+id/mintButton"
@@ -1834,9 +1854,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintBottom_toBottomOf="@+id/mintButton"
@@ -1851,9 +1869,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintBottom_toBottomOf="@+id/mintButton"
@@ -1870,9 +1886,7 @@
                     android:layout_margin="4dp"
                     android:padding="8dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintEnd_toStartOf="@+id/color1Guide"
@@ -1886,9 +1900,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintEnd_toStartOf="@+id/color2Guide"
@@ -1903,9 +1915,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintBottom_toBottomOf="@+id/indigoButton"
@@ -1920,9 +1930,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintBottom_toBottomOf="@+id/indigoButton"
@@ -1937,9 +1945,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintBottom_toBottomOf="@+id/indigoButton"
@@ -1954,9 +1960,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintBottom_toBottomOf="@+id/indigoButton"
@@ -1973,9 +1977,7 @@
                     android:layout_margin="4dp"
                     android:padding="8dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintEnd_toStartOf="@+id/color1Guide"
@@ -1989,9 +1991,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintEnd_toStartOf="@+id/color2Guide"
@@ -2006,9 +2006,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:clickable="false"
                     android:elevation="6dp"
-                    android:focusable="false"
                     android:src="@drawable/editor_color_circle"
                     android:tintMode="screen"
                     app:layout_constraintBottom_toBottomOf="@+id/orangeButton"
