--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1006,7 +1006,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="6dp"
-                android:text="TOP BAR (LEFT)"
+                android:text="@string/top_bar_left"
                 android:tag="cSecondary cTop 2"
                 android:textColor="@color/white"
                 android:elevation="16dp"
@@ -1072,7 +1072,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="6dp"
-                android:text="KEYPAD"
+                android:text="@string/keypad"
                 android:tag="cKeypad cNum 0"
                 android:elevation="16dp"
                 android:textColor="@color/white"
@@ -1122,7 +1122,7 @@
                 android:id="@+id/primaryZoneButtonText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PRIMARY"
+                android:text="@string/primary"
                 android:textColor="@color/white"
                 android:rotation="-90"
                 android:elevation="16dp"
@@ -1155,7 +1155,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="6dp"
-                android:text="TOP BAR (RIGHT)"
+                android:text="@string/top_bar_right"
                 android:tag="cTertiary -btt 3"
                 android:textColor="@color/white"
                 android:elevation="16dp"
@@ -1175,7 +1175,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:onClick="onApplyClick"
         app:layout_constraintBottom_toTopOf="@id/bottomBar"
         app:layout_constraintTop_toTopOf="@id/bottomBar"
         android:src="@drawable/ic_baseline_check_24"
