--- a/app/src/main/res/layout-land/activity_about_black.xml
+++ b/app/src/main/res/layout-land/activity_about_black.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="TermCalc"
+            android:text="@string/app_name"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -47,7 +47,6 @@
             android:id="@+id/aboutIcon"
             android:layout_width="61dp"
             android:layout_height="65dp"
-            android:contentDescription="Navigation Header"
             android:elevation="10dp"
             android:paddingTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -86,11 +85,11 @@
                 android:background="@null"
                 android:onClick="openWebView"
                 android:src="@drawable/ic_vertical_align_bottom_24"
-                android:tint="@color/colorAccent"
                 app:layout_constraintBottom_toBottomOf="@+id/updateCheck"
                 app:layout_constraintEnd_toStartOf="@+id/updateCheck"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/updateCheck" />
+                app:layout_constraintTop_toTopOf="@+id/updateCheck"
+                app:tint="@color/colorAccent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -128,7 +127,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="24dp"
-                    android:text="Contact Me:"
+                    android:text="@string/contact_me"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -159,11 +158,11 @@
                     android:background="?selectableItemBackgroundBorderless"
                     android:onClick="linkHelper"
                     android:tag="twitter"
-                    android:tint="#FFFFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/feedbackTitle"
                     app:layout_constraintTop_toBottomOf="@+id/feedbackTitle"
-                    app:srcCompat="@drawable/ic_twitter_24" />
+                    app:srcCompat="@drawable/ic_twitter_24"
+                    app:tint="#FFFFFF" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -217,11 +216,11 @@
                     android:background="?selectableItemBackgroundBorderless"
                     android:onClick="linkHelper"
                     android:tag="spotify"
-                    android:tint="#FFFFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/donateTitle"
                     app:layout_constraintTop_toBottomOf="@+id/donateTitle"
-                    app:srcCompat="@drawable/ic_spotify_logo" />
+                    app:srcCompat="@drawable/ic_spotify_logo"
+                    app:tint="#FFFFFF" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -245,7 +244,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="24dp"
-                    android:text="Feedback:"
+                    android:text="@string/feedback"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -275,11 +274,11 @@
                     android:layout_marginBottom="24dp"
                     android:background="?selectableItemBackgroundBorderless"
                     android:onClick="openBugReport"
-                    android:tint="#FFFFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/communityTitle"
                     app:layout_constraintTop_toBottomOf="@+id/communityTitle"
-                    app:srcCompat="@drawable/ic_baseline_bug_report_24" />
+                    app:srcCompat="@drawable/ic_baseline_bug_report_24"
+                    app:tint="#FFFFFF" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
