--- a/app/src/main/res/layout-land/activity_about_light.xml
+++ b/app/src/main/res/layout-land/activity_about_light.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="TermCalc"
+            android:text="@string/app_name"
             android:textColor="#222222"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -47,7 +47,6 @@
             android:id="@+id/aboutIcon"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:contentDescription="Navigation Header"
             android:elevation="10dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,11 +104,11 @@
                 android:background="@null"
                 android:onClick="openWebView"
                 android:src="@drawable/ic_vertical_align_bottom_24"
-                android:tint="@color/colorAccent"
                 app:layout_constraintBottom_toBottomOf="@+id/updateCheck"
                 app:layout_constraintEnd_toStartOf="@+id/updateCheck"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/updateCheck" />
+                app:layout_constraintTop_toTopOf="@+id/updateCheck"
+                app:tint="@color/colorAccent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -147,7 +146,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="24dp"
-                    android:text="Contact Me:"
+                    android:text="@string/contact_me"
                     android:textColor="#222222"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -178,11 +177,11 @@
                     android:background="?selectableItemBackgroundBorderless"
                     android:onClick="linkHelper"
                     android:tag="twitter"
-                    android:tint="#222222"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/feedbackTitle"
                     app:layout_constraintTop_toBottomOf="@+id/feedbackTitle"
-                    app:srcCompat="@drawable/ic_twitter_24" />
+                    app:srcCompat="@drawable/ic_twitter_24"
+                    app:tint="#222222" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -205,7 +204,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="24dp"
-                    android:text="Support Development:"
+                    android:text="@string/support_development"
                     android:textColor="#222222"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -236,11 +235,11 @@
                     android:background="?selectableItemBackgroundBorderless"
                     android:onClick="linkHelper"
                     android:tag="spotify"
-                    android:tint="#222222"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/donateTitle"
                     app:layout_constraintTop_toBottomOf="@+id/donateTitle"
-                    app:srcCompat="@drawable/ic_spotify_logo" />
+                    app:srcCompat="@drawable/ic_spotify_logo"
+                    app:tint="#222222" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -264,7 +263,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="24dp"
-                    android:text="Feedback:"
+                    android:text="@string/feedback"
                     android:textColor="#222222"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -294,11 +293,11 @@
                     android:layout_marginBottom="24dp"
                     android:background="?selectableItemBackgroundBorderless"
                     android:onClick="openBugReport"
-                    android:tint="#222222"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/communityTitle"
                     app:layout_constraintTop_toBottomOf="@+id/communityTitle"
-                    app:srcCompat="@drawable/ic_baseline_bug_report_24" />
+                    app:srcCompat="@drawable/ic_baseline_bug_report_24"
+                    app:tint="#222222" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
