--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -11,6 +11,6 @@
     <item
         android:id="@+id/help"
         android:orderInCategory="104"
-        android:title="Help"
+        android:title="@string/help"
         app:showAsAction="never"/>
 </menu>
