--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -87,7 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="Buttons"
+            android:text="@string/buttons"
             android:textSize="12sp"
             android:paddingHorizontal="20dp"
             android:background="?selectableItemBackgroundBorderless"
@@ -99,7 +99,7 @@
             android:id="@+id/zonesTab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Zones"
+            android:text="@string/zones"
             android:textSize="12sp"
             android:paddingHorizontal="28dp"
             android:background="?selectableItemBackgroundBorderless"
