--- a/app/src/main/res/layout/constants_bottom_sheet.xml
+++ b/app/src/main/res/layout/constants_bottom_sheet.xml
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:text="Constants"
+        android:text="@string/constants"
         android:layout_marginTop="2dp"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
