--- a/app/src/main/res/layout/functions_bottom_sheet.xml
+++ b/app/src/main/res/layout/functions_bottom_sheet.xml
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:text="Functions"
+        android:text="@string/functions"
         android:layout_marginTop="2dp"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
