--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -894,7 +894,7 @@
                 android:id="@+id/editorPreviewTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Home"
+                android:text="@string/home_menu_item"
                 android:textAllCaps="false"
                 android:background="@null"
                 android:textSize="16sp"
@@ -922,7 +922,7 @@
                 android:layout_height="44dp"
                 android:layout_marginEnd="2dp"
                 android:background="@null"
-                android:text="RAD"
+                android:text="@string/rad"
                 android:textColor="#FFFFFF"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/editorFakeToolbar"
