--- a/app/src/main/res/layout/new_cpdialog.xml
+++ b/app/src/main/res/layout/new_cpdialog.xml
@@ -23,7 +23,7 @@
                 android:layout_marginVertical="8dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
-                android:text="Color Picker"
+                android:text="@string/color_picker"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
-                android:text="Clipboard"
+                android:text="@string/clipboard"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/divider2"
