--- a/app/src/main/res/layout/rename.xml
+++ b/app/src/main/res/layout/rename.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="16dp"
-                android:hint="Theme Name"
+                android:hint="@string/theme_name"
                 android:imeOptions="actionDone"
                 android:inputType="text" />
 
