--- a/app/src/main/res/layout/bg_text_dialog.xml
+++ b/app/src/main/res/layout/bg_text_dialog.xml
@@ -80,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Background"
+                android:text="@string/background"
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="@+id/bgCPLayout"
                 app:layout_constraintStart_toEndOf="@+id/bgCPLayout"
@@ -143,7 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Text"
+                android:text="@string/text"
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="@+id/txtCPLayout"
                 app:layout_constraintStart_toEndOf="@+id/txtCPLayout"
